Development Portal (2020-01-30 shi)
==============================
Remove publisher-specific back button on general lists


Development Portal (2020-01-04 shi)
==============================
Update IATI Spend default year to 2017
Update footer text for how data is used


Development Portal (2019-12-09 shi)
==============================
Fix sector group and category icons and text
Fix dflat SAVi date div
Add glossary for Sector graphs


Development Portal (2019-11-21 shi)
==============================
Update all target_blank with noopener and noreferrer
Commafy remaining stats and numbers


Development Portal (2019-11-20 shi)
==============================
Add external search input filter and css
Add placeholder text and style
Add translations for external search
List filters in alphabetical order
Rearrange sections
Add related activity and tied status filter
Update translations for new filters
Update help section


Development Portal (2019-11-19 shi)
==============================
Update humanitarian filter


Development Portal (2019-11-18 shi)
==============================
Add result type and documentary category as filters
Add translations
Add wildcard for document category
Add humanitarian-scope, transaction type
Add default flow, collaboration type
Update translations with new filters
Update code source for search filters
Add labels for new elements


Development Portal (2019-11-15 shi)
==============================
Add total commitment threshold
Add translations


Development Portal (2019-11-13 shi)
==============================
Fix org file table layout
Update source links
Fix sector graph peak and chart size
Update themes
Update human values for currency and doc category codes


Development Portal (2019-11-12 shi)
==============================
Add default-finance-type search test
Add tag vocab list
Add translations
Update filter legend and information
Add advance filters info


Development Portal (2019-11-11 shi)
==============================