@@ -245,7 +245,7 @@ Total number of projects that are missing dates
 Data from IATI Registry on {today}
 
 #list_active_text
-Active projects
+Projects ending soon
 
 #list_active_declare_text
 Recent first
