@@ -131,7 +131,7 @@ span.doc_rec	{background-color:rgba(22,24,37,0.6);}
 .wrap_activity_date div span				{font-size:14px; color:#000e20; text-transform:uppercase;}
 
 /*	TABLES	*/
-.currency		{font-size:12px; color:#ccc;}
+td .currency	{font-size:12px; color:#ccc;}
 .value			{text-align:right;}
 .status			{text-align:center;}
 .wrap_tab		{padding-bottom:5px; border-bottom:1px solid #666; margin-bottom:5px;}
