@@ -1,3 +1,8 @@
+Static site (2020-01-31 shi)
+==============================
+Update FAQ text
+
+
 Static site (2020-01-30 shi)
 ==============================
 Update FAQ to include why activities are not listed on ending soon list
