@@ -1,3 +1,8 @@
+Development Portal (2020-01-31 shi)
+==============================
+Update text for projects ending soon
+
+
 Development Portal (2020-01-30 shi)
 ==============================
 Remove publisher-specific back button on general lists
